--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
     fi
   - |
     if [ "$TRAVIS_OS_NAME" == "windows" ]; then
-      make_externals.bat
+      cmd "/C make_externals.bat"
     fi
 notifications:
   webhooks:
