--- a/.travis.yml
+++ b/.travis.yml
@@ -39,16 +39,20 @@ matrix:
     - name: Windows MSVC
       env: LABEL=WindowsMSVC
       os: windows
+    - name: OS X
+      env: LABEL=OSX
+      os: osx
+      osx_image: xcode10.1
+      before_script:
+        - MACOSX_DEPLOYMENT_TARGET=10.14
   allow_failures:
     - os: windows
 script:
   - |
-    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      ./make_externals.sh
-    fi
-  - |
     if [ "$TRAVIS_OS_NAME" == "windows" ]; then
       cmd "/C make_externals.bat"
+    else
+      ./make_externals.sh
     fi
 notifications:
   webhooks:
