--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 addons:
   apt:
+    update: true
     packages:
       - g++-7
       - clang-6.0
@@ -9,9 +10,11 @@ addons:
       - libglu1-mesa-dev
       - libx11-dev
       - libxi-dev
+      - libboost1.70-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-xenial-6.0
+      - sourceline: 'ppa:mhier/libboost-latest'
 cache:
   ccache: true
   directories:
@@ -22,7 +25,7 @@ matrix:
     - name: Linux GCC
       env: LABEL=LinuxGCC
       os: linux
-      dist: xenial
+      dist: bionic
       sudo: required
       before_script:
         - CC=gcc-7
@@ -30,7 +33,7 @@ matrix:
     - name: Linux Clang
       env: LABEL=LinuxClang
       os: linux
-      dist: xenial
+      dist: bionic
       sudo: required
       before_script:
         - CC=clang-6.0
