--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,10 @@ matrix:
 script:
   - |
     if [ "$TRAVIS_OS_NAME" == "windows" ]; then
-      cmd "/C make_externals.bat"
-      cmd "/C make_release.bat"
+      exit 1
+      # As windows builds take too long, we abort them for now
+      # cmd "/C make_externals.bat"
+      # cmd "/C make_release.bat"
     else
       ./make_externals.sh --with-ccache
       ./make_release.sh --with-ccache
