:wrench: Try using jobs instead of matrix in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,17 @@ cache:
   directories:
   - build/linux-externals
   - build/windows-externals
-matrix:
+jobs:
   include:
-    - name: Linux GCC
+    - stage: test
+      name: "Check Clang-Format"
+      os: linux
+      dist: bionic
+      script: 
+        - whereis clang-format
+        - whereis clang-format-6
+    - stage: build
+      name: Linux GCC
       env: LABEL=LinuxGCC
       os: linux
       dist: bionic
@@ -29,6 +37,9 @@ matrix:
       before_script:
         - CC=gcc-7
         - CXX=g++-7
+      script:
+        - ./make_externals.sh --with-ccache
+        - ./make_release.sh --with-ccache
     - name: Linux Clang
       env: LABEL=LinuxClang
       os: linux
@@ -37,22 +48,19 @@ matrix:
       before_script:
         - CC=clang-6.0
         - CXX=clang++-6.0
+      script:
+        - ./make_externals.sh --with-ccache
+        - ./make_release.sh --with-ccache
     - name: Windows MSVC
       env: LABEL=WindowsMSVC
       os: windows
+      script:
+        - exit 1
+        - # As windows builds take too long, we abort them for now
+        - # cmd "/C make_externals.bat"
+        - # cmd "/C make_release.bat"
   allow_failures:
     - os: windows
-script:
-  - |
-    if [ "$TRAVIS_OS_NAME" == "windows" ]; then
-      exit 1
-      # As windows builds take too long, we abort them for now
-      # cmd "/C make_externals.bat"
-      # cmd "/C make_release.bat"
-    else
-      ./make_externals.sh --with-ccache
-      ./make_release.sh --with-ccache
-    fi
 notifications:
   webhooks:
     urls:
