--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(csp-sharad)
 add_subdirectory(csp-simple-bodies)
 add_subdirectory(csp-stars)
 add_subdirectory(csp-trajectories)
+add_subdirectory(csp-vestec)
