--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
+    - name: Download Dependencies
+      run: |
+        sudo apt-get update -q
+        sudo apt-get install clang-format
     - name: Run Clang-Format
       run: ./clang-format.sh
     - name: Compare Results
