--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Download Dependencies
       run: |
         sudo apt-get update -q
-        sudo apt-get install clang-format
+        sudo apt-get install clang-format-6.0 clang-format
     - name: Run Clang-Format
       run: ./clang-format.sh
     - name: Compare Results
