--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,7 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get remove -y clang-6.0 libclang-common-6.0-dev libclang1-6.0 libllvm6.0
-        sudo apt-get autoremove
         sudo apt-get install -y clang-format
-        export foo=bar
     - name: Run Clang-Format
       run: ./clang-format.sh
     - name: Compare Results
@@ -32,9 +30,6 @@ jobs:
       run: git submodule update --init
     - name: Download Dependencies
       run: |
-        echo "-------------"
-        echo $foo
-        echo "-------------"
         sudo add-apt-repository ppa:mhier/libboost-latest
         sudo apt-get update -q
         sudo apt-get install libc++-dev
@@ -59,9 +54,6 @@ jobs:
       run: git submodule update --init
     - name: Download Dependencies
       run: |
-        echo "-------------"
-        echo $foo
-        echo "-------------"
         sudo add-apt-repository ppa:mhier/libboost-latest
         sudo apt-get update -q
         sudo apt-get install libc++-dev
@@ -71,13 +63,15 @@ jobs:
         sudo apt-get install libxi-dev
         sudo apt-get install libgconf-2-4
         sudo apt-get install libboost1.70-dev
-        export CC=clang
-        export CXX=clang++
-    - name: Test
-      run: echo $CXX
     - name: Build Externals
+      env:
+        CC: clang
+        CXX: clang++
       run: ./make_externals.sh
     - name: Build CosmoScout VR
+      env:
+        CC: clang
+        CXX: clang++
       run: ./make.sh
 
   build_windows:
