--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: Continuous Integration
 
-on: [push]
+on:
+  pull_request:
+  push:
+    branches:    
+      - master
+      - develop
 
 jobs:
   clang_format:
