--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,8 @@ jobs:
       run: |
         sudo add-apt-repository ppa:mhier/libboost-latest
         sudo apt-get update -q
-        sudo apt-get install libc++-dev
-        sudo apt-get install libgl1-mesa-dev
-        sudo apt-get install libglu1-mesa-dev
-        sudo apt-get install libx11-dev
-        sudo apt-get install libxi-dev
-        sudo apt-get install libgconf-2-4
-        sudo apt-get install libboost1.70-dev
+        sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
+        sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev
     - name: Build Externals
       run: ./make_externals.sh
     - name: Build CosmoScout VR
@@ -62,13 +57,8 @@ jobs:
       run: |
         sudo add-apt-repository ppa:mhier/libboost-latest
         sudo apt-get update -q
-        sudo apt-get install libc++-dev
-        sudo apt-get install libgl1-mesa-dev
-        sudo apt-get install libglu1-mesa-dev
-        sudo apt-get install libx11-dev
-        sudo apt-get install libxi-dev
-        sudo apt-get install libgconf-2-4
-        sudo apt-get install libboost1.70-dev
+        sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
+        sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev
     - name: Build Externals
       env:
         CC: clang
