--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: CI
 
 on:
-  check_suite:
-    types: [requested, rerequested]
-  pull_request:
-    types: [opened, synchronize, reopened]
+  check_run: {}
+  pull_request: {}
   push:
     branches:    
       - master
