--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: CI
 
 on:
-  check_run: {}
+  commit_comment: {}
   pull_request: {}
-  push: {}
+  push:
+    branches:
+      - develop
+      - master
 
 jobs:
   clang_format:
