--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,21 @@ jobs:
         DIFF=$(git diff)
         if [ ! -z "$DIFF" ]; then echo $DIFF && exit 1; fi
         
-  build_linux_gcc:
+  build_osx:
+    name: OSX Build
+    runs-on: macOS-10.14
+    needs: clang_format
+    if: github.event_name == 'pull_request' || github.ref == 'master'  || github.ref == 'develop' || contains(github.event.commits[0].message, '[run-ci]')
+    steps:
+    - uses: actions/checkout@v1
+    - name: Checkout Submodules
+      run: git submodule update --init
+    - name: Build Externals
+      run: ./make_externals.sh
+    - name: Build CosmoScout VR
+      run: ./make.sh
+      
+    build_linux_gcc:
     name: Linux Build (gcc 7.4.0)
     runs-on: ubuntu-18.04
     needs: clang_format
