--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
     name: Linux Release
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout Repository
+      uses: actions/checkout@v1
     - name: Checkout Submodules
       run: git submodule update --init
     - name: Download Dependencies
@@ -25,7 +26,8 @@ jobs:
       run: ./make_externals.sh
     - name: Build CosmoScout VR
       run: ./make.sh
-    - uses: actions/upload-artifact@master
+    - name: Upload Artifact
+      uses: actions/upload-artifact@master
       with:
         name: cosmoscout-vr
         path: install/linux-release
@@ -34,7 +36,8 @@ jobs:
     name: Windows Release
     runs-on: windows-2016
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout Repository
+      uses: actions/checkout@v1
     - name: Checkout Submodules
       run: git submodule update --init
     - name: Get Example Data
@@ -43,7 +46,8 @@ jobs:
       run: ./make_externals.bat
     - name: Build CosmoScout VR
       run: ./make.bat
-    - uses: actions/upload-artifact@master
+    - name: Upload Artifact
+      uses: actions/upload-artifact@master
       with:
         name: cosmoscout-vr
         path: install/windows-release
