--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Create Artifact
       run: | 
         move install\windows-release cosmoscout-vr
-        cmake -E tar cv --format=zip cosmoscout-vr-win64.zip cosmoscout-vr
+        cmake -E tar cv cosmoscout-vr-win64.zip --format=zip cosmoscout-vr
     - name: Upload to Release
       uses: svenstaro/upload-release-action@v1-release
       with:
