--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v1
     - name: Checkout Submodules
       run: git submodule update --init
-    - name: Create Archive
+    - name: Create Release
       run: externals/git-archive-all.sh/git-archive-all.sh --prefix cosmoscout-vr/ source-with-submodules.tar.gz
-    - name: Upload to Release
+    - name: Upload Release
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -43,11 +43,11 @@ jobs:
       run: ./make_externals.sh
     - name: Build CosmoScout VR
       run: ./make.sh
-    - name: Create Artifact
+    - name: Create Release
       run: | 
         mv install/linux-release cosmoscout-vr
         cmake -E tar cv cosmoscout-vr-linux64.tar.gz cosmoscout-vr
-    - name: Upload to Release
+    - name: Upload Release
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -68,11 +68,11 @@ jobs:
       run: make_externals.bat
     - name: Build CosmoScout VR
       run: make.bat
-    - name: Create Artifact
+    - name: Create Release
       run: | 
         move install\windows-release cosmoscout-vr
         cmake -E tar cv cosmoscout-vr-win64.zip --format=zip cosmoscout-vr
-    - name: Upload to Release
+    - name: Upload Release
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
