--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,13 +64,9 @@ jobs:
       uses: actions/checkout@v1
     - name: Checkout Submodules
       run: git submodule update --init
-    - name: Build Externals
-      run: make_externals.bat
-    - name: Build CosmoScout VR
-      run: make.bat
     - name: Create Release
       run: | 
-        move install\windows-release cosmoscout-vr
+        move src cosmoscout-vr
         cmake -E tar cv cosmoscout-vr-win64.zip --format=zip cosmoscout-vr
     - name: Upload Release
       uses: svenstaro/upload-release-action@v1-release
