:wrench: Checkout branch before deploying [run-ci]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
+    - name: Checkout Branch
+      run: git checkout ${{ github.ref }}
     - name: Checkout Submodules
       run: git submodule update --init
     - name: Download Dependencies
@@ -62,6 +64,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
+    - name: Checkout Branch
+      run: git checkout ${{ github.ref }}
     - name: Checkout Submodules
       run: git submodule update --init
     - name: Build Externals
