--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,12 @@ jobs:
   print_debug:
     name: Print Debug
     runs-on: ubuntu-18.04
-    run: |
-      echo "{{ github.ref }}"
-      echo "{{ github.event.head_commit.message }}"
-      echo "{{ github.event.commits[0].message }}"
+    steps:
+    - name: Print Debug
+      run: |
+        echo "{{ github.ref }}"
+        echo "{{ github.event.head_commit.message }}"
+        echo "{{ github.event.commits[0].message }}"
   clang_format:
     name: Check Clang-Format
     runs-on: ubuntu-18.04
