--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Test
 
-on: [push]
+on:
+  push:
+    branches:
+    - '*'
+  pull_request:
+    branches:
+    - '*'
 
 jobs:
   print_debug:
