--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Test
 on:
   push:
     branches:
-    - '*'
+    - 'ref/branches/*'
   pull_request:
     branches:
-    - '*'
+    - 'ref/branches/*'
 
 jobs:
   print_debug:
