--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,6 @@
 name: Test
 
-on:
-  push:
-    branches:
-    - 'refs/heads/*'
-  pull_request:
-    branches:
-    - 'refs/heads/*'
+on: [push, pull_request]
 
 jobs:
   print_debug:
