--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,22 @@
 name: Build
 
-on: [push, pull_request]
-
-if: "contains(github.event.head_commit.message, '[run-ci]')"
+on:
+  push:
+    branches:
+    - '**'
+  pull_request:
+    branches:
+    - '**'
 
 jobs:
   clang_format:
     name: Check Clang-Format
     runs-on: ubuntu-18.04
+    if: >
+      github.event_name == 'pull_request' ||
+      contains(github.ref, 'master') ||
+      contains(github.ref, 'develop') ||
+      contains(github.event.commits[0].message, '[run-ci]')
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -26,7 +35,7 @@ jobs:
   build_linux_gcc:
     name: Linux Build (gcc 7.4.0)
     runs-on: ubuntu-18.04
-    if: "contains(github.event.head_commit.message, '[run-ci]')"
+    needs: clang_format
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -46,7 +55,7 @@ jobs:
   build_linux_clang:
     name: Linux Build (clang 6.0)
     runs-on: ubuntu-18.04
-    if: "contains(github.event.head_commit.message, '[run-ci]')"
+    needs: clang_format
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -72,7 +81,7 @@ jobs:
   build_windows:
     name: Windows Build (msvc 19.16.27032.1)
     runs-on: windows-2016
-    if: "contains(github.event.head_commit.message, '[run-ci]')"
+    needs: clang_format
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
