add [no-ci] tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Build
 
 on:
   push:
@@ -32,9 +32,9 @@ jobs:
     runs-on: ubuntu-18.04
     if: >
       github.event_name == 'pull_request' ||
-      contains(github.ref, 'master') ||
-      contains(github.ref, 'develop') ||
-      contains(github.event.commits[0].message, '[run-ci]')
+      ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      contains(github.event.head_commit.message, '[run-ci]')
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -56,9 +56,9 @@ jobs:
     runs-on: ubuntu-18.04
     if: >
       github.event_name == 'pull_request' ||
-      contains(github.ref, 'master') ||
-      contains(github.ref, 'develop') ||
-      contains(github.event.commits[0].message, '[run-ci]')
+      ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      contains(github.event.head_commit.message, '[run-ci]')
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -86,9 +86,9 @@ jobs:
     runs-on: windows-2016
     if: >
       github.event_name == 'pull_request' ||
-      contains(github.ref, 'master') ||
-      contains(github.ref, 'develop') ||
-      contains(github.event.commits[0].message, '[run-ci]')
+      ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
+      contains(github.event.head_commit.message, '[run-ci]')
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
